# dqxclarity-linux

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  ROADMAP.md  pyproject.toml
docs/: memory-and-scanner-findings.md
scripts/: capture_all.py  net_diag.py  wt_diag.py
spikes/: frida_wow64_eval.py
src/dqxclarity/: __init__.py  cli.py  config.py  doctor.py
src/dqxclarity/patching/: files.py  manifest.py
src/dqxclarity/process/: detour.py  discover.py  hooks.py  memory_linux.py  signatures.py
src/dqxclarity/runtime/: dispatch.py  hookjournal.py  name_chains.py  names_loop.py  netcapture.py  notice_loop.py  playernames.py  profile.py
src/dqxclarity/translate/: community.py  db.py  dialogue.py  freshness.py  glossary.py  pipeline.py  placeholders.py  rewards.py  tags.py  (+3 more)
tests/: IT25_TEST_WRITER_RECORD.md  test_battle_names.py  test_color_tags.py  test_community_coverage.py  test_community_json.py  test_config.py  test_data_gaps.py  test_detour.py  test_doctor.py  test_freshness.py  test_glossary.py  test_glossary_coverage.py  test_hookjournal.py  test_hooks.py  test_lifecycle.py  test_more_hooks.py  test_mt_output_polish.py  test_name_chains.py  test_name_shield.py  test_nameplate_prefix.py  test_netcapture.py  test_network_text.py  test_notice.py  test_patching.py  test_patching_coverage.py  test_patching_startup.py  test_pipeline_integration.py  test_placeholders.py  test_player.py  test_profile.py  test_profiles.py  test_providers.py  test_rewards.py  test_run_names.py  test_send_text.py  test_serve.py  test_suppression.py  test_tags.py  test_translate.py
(+8 files in other folders)
