[project]
name = "dqxclarity-linux"
version = "0.1.0"
description = "Linux-native CLI fork of dqxclarity — translates Dragon Quest X running under Steam/Proton"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "vdf>=3.4",          # parse Steam libraryfolders.vdf / appmanifest .acf
    "platformdirs>=4.2",
    "pykakasi>=2.2",     # local, in-process JP->romaji for player/NPC names (no service)
    "openpyxl>=3.1",     # parse the community merge.xlsx dialogue dataset (dqxclarity sync)
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
dqxclarity = "dqxclarity.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dqxclarity"]

[tool.ruff]
line-length = 100
target-version = "py311"
